The following list contains all changes to pgAdmin3, as present in cvs. 
<ul>
<li>A version number denotes the release version, which contains the patch or feature mentioned.
<li>*** marks fixes that are backported to stable branch, and will be included in the next maintenance release.
<li>Unmarked fixes are experimental and are contained in snapshots only.
</ul>
<br>
<ul>
    <li>2005-03-18 DP  1.2.1 Include the hostname in the connect string for Kerberos support, per Magnus Hagander
    <li>2005-03-04 DP  1.2.1 Fix aggregate SQL generation per James Prichard
    <li>2005-02-07 AHP 1.2.1 fix libpq/ssl library detection
    <li>2005-01-13 DP  1.2.1 fix EXPLICIT CAST sql generation (r: Merlin Moncure)
    <li>2004-12-06 AP  1.2.1 Fix tablespace reference in namespace
    <li>2004-11-19 AP  1.2.0 catch possible false error msg
    <li>2004-11-19 AP  1.2.0 fix tables statistics
    <li>2004-11-18 AP  1.2.0 fix change column dialog (r: Walter Haslbeck)
    <li>2004-11-18 AP  1.2.0 fix missing schema in EditGrid (r: Martin Susil)
    <li>2004-11-16 AP  1.2.0 fix pg_dump option
    <li>2004-11-10 AP 1.2RC2 Remove tablespace from schema (pgsql post-beta4 change)
    <li>2004-11-10 AP 1.2RC2 Fix properties for multiply inherited tables (r: Riccardo G. Facchini)
    <li>2004-11-10 AP 1.2RC2 Fix OSX issue (r: Patrick Hatcher)
    <li>2004-11-09 AP 1.2RC2 Fix remembering SSL connection parameter (r: Justin Clift)
    <li>2004-11-09 AP 1.2RC2 Fix GTK comboboxes (r: Tim Booth)
    <li>2004-11-05 AP 1.2RC2 Disable changing parameters of connected servers
    <li>2004-11-04 AP 1.2RC2 Fix duplicate functions in Cast dialog (r: Alexander Borkowski)
    <li>2004-11-03 AP 1.2RC1 MSW Combobox Workaround: missing EVT_TEXT events
    <li>2004-11-02 AP 1.2RC1 Fix some type related issues (r: Alexander Borkowski)
    <li>2004-11-02 AP 1.2RC1 Fix some owner change related issues (r: Alexander Borkowski)
    <li>2004-10-29 AP 1.2RC1 full casting in utffile fixing some compilers