@@ -17,6 +17,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2005-03-18 DP  1.2.1 Set column stats and comments correctly when creating tables.
     <li>2005-03-18 DP  1.2.1 Include the hostname in the connect string for Kerberos support, per Magnus Hagander
     <li>2005-03-04 DP  1.2.1 Fix aggregate SQL generation per James Prichard
     <li>2005-02-07 AHP 1.2.1 fix libpq/ssl library detection
